--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -456,7 +456,7 @@ pre {
       max-width: 960px; } }
   @media (min-width: 1200px) {
     .container {
-      max-width: 1140px; } }
+      max-width: 1300px; } }
 
 .container-fluid {
   width: 100%;
@@ -3478,7 +3478,6 @@ input[type="button"].btn-block {
 .navbar-nav {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
@@ -3506,7 +3505,8 @@ input[type="button"].btn-block {
   flex-grow: 1;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center; }
+  align-items: center;
+  flex-direction: column;}
 
 .navbar-toggler {
   padding: 0.25rem 0.75rem;
@@ -6747,7 +6747,6 @@ button.bg-dark:focus {
 .my-auto {
   margin-bottom: auto !important; }
 
-.ml-auto,
 .mx-auto {
   margin-left: auto !important; }
 
@@ -8047,7 +8046,7 @@ h1, h2, h3, h4, h5,
 .social-media {
   display: inline-block; }
   .social-media p a {
-    width: 40px;
+    width: 90px;
     height: 40px;
     margin-right: 1px; }
     .social-media p a span {
@@ -8087,8 +8086,8 @@ h1, h2, h3, h4, h5,
     .ftco-navbar-light .navbar-nav {
       padding-bottom: 10px; } }
   .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
-    font-size: 14px;
-    padding-top: 2.3rem;
+    font-size: 1rem;
+    padding-top: 1.3rem;
     padding-bottom: 2.3rem;
     padding-left: 18px;
     padding-right: 18px;
@@ -8237,7 +8236,10 @@ h1, h2, h3, h4, h5,
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
-  position: relative; }
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
   @media (max-width: 1199.98px) {
     .hero-wrap {
       background-position: center center !important; } }
@@ -9799,6 +9801,110 @@ textarea.form-control {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
     
-.w-p100 {
-  width: 150% !important; }
+    
 
+ 
+ .col-md-7-p {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 58.33333%;
+    width: 100%;
+   }
+ 
+.smKey #searchText{
+    width: 500px;
+    padding: 0 10px 3px 12px;
+    height: 35px;
+    font: 16px/35px '맑은 고딕',Malgun Gothic,'돋움',Dotum,sans-serif;
+    letter-spacing: -1px;
+    border: 2px solid darkseagreen;
+    border-radius: 6px;
+ }
+ 
+ 
+.conheight{
+ 
+ height: 30%;
+ width: 80%;
+ margin-top:20px
+ }
+ 
+ @media (max-width: 991.98px){
+ .navbar-brand{
+ display:none;
+ }
+ 
+ }
+
+#navwidth{
+	width:100%;
+}
+
+#navwidth ul {
+    width: 100%;
+   
+}
+
+
+.logo_space {
+   width: 25%;
+    margin: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+.controll_nav {
+    height: 100%;
+    width: 70%;
+    margin: 0 10% 0 10%;
+    display: flex;
+    justify-content: center;
+}
+
+
+.smKey {
+	display:flex;
+}
+
+.searchBtn{
+	background-color: darkseagreen;
+	margin-left: -15px;
+	border: 1px solid darkseagreen;
+	width: 50px;
+	border-radius: 0 6px 6px 0;
+	cursor: pointer;
+}
+.searchBtn:hover{
+	background-color: cadetblue;
+}
+
+div#ftco-nav {
+    width: 100%;
+    flex-direction: unset;
+    margin-left: 20px;
+}
+
+.fa-search{
+	color: white;
+}
+
+.logo{
+	width:10px;
+}
+
+.mainlogo {
+    width: 50px;
+    height: 50px;
+    background-size: cover;
+}
+
+
+
+
+
+
+
+
+
+ /* miyoung */
